--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,13 @@
 name: publish
 
 on:
-  - push
+  workflow_dispatch:
+  push:
+    branches:
+      - "master"
+
+permissions:
+  contents: write
 
 jobs:
   main:
